[gd_scene load_steps=3 format=3 uid="uid://c5pvd3pc6nxbb"]

[ext_resource type="Script" uid="uid://dcjaesifb4ry3" path="res://scenes/maps/title_map.gd" id="1_l8bam"]
[ext_resource type="Texture2D" uid="uid://euq327p8044c" path="res://assets/game_background.png" id="2_difvg"]

[node name="TitleMap" type="Node2D"]
script = ExtResource("1_l8bam")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="TextureRect" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_difvg")
expand_mode = 5

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 20

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/MarginContainer/MarginContainer2"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Kbity Game"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="New Game" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Load Game" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="Quit Game" type="Button" parent="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/Load Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/MarginContainer/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
